--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mobile Apps Development Projects project.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,10 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.1",
     "node-wit": "^6.0.1"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
