--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "brain.js": "^2.0.0-beta.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "http-request": "^0.7.0",
     "mongoose": "^5.12.1",
     "node-wit": "^6.0.1"
   },
