--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "Mobile Apps Development Projects project.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "brain.js": "^2.0.0-beta.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "http-request": "^0.7.0",
     "mongoose": "^5.12.1",
     "node-wit": "^6.0.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
